build(criado o githubactions): :construction_worker: Incluindo o docker buildx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "conventionalCommits.scopes": [
-        "Alterado a classe de test"
+        "Alterado a classe de test",
+        "criado o githubactions"
     ]
 }
