--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,12 +19,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-     
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }} 
+      
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v5
         with:
-          push: false
+          push: true
           tags: bassanirodrigo/fc2.0-ci-go:latest
 
     
