--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: bassanirodrigo/fc2.0-ci-go:latest
+          tags: rodrigobassani/fc2.0-ci-go:latest
 
     
